<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:padding="10dp"
    tools:context=".ui.user.order.OrderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:textSize="28sp"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewOrderDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextOrderAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextOrderPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_num"
            android:inputType="phone"/>

        <RadioGroup
            android:id="@+id/radioGroupPaymentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/radioButtonCreditCard"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/layoutCardDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edges_background"
            android:padding="10dp"
            android:orientation="vertical">

            <!-- Edit Text: Card Number -->
            <EditText
                android:id="@+id/editTextCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:importantForAutofill="no"
                android:inputType="number" />

            <!-- Edit Text: Expiry Date -->
            <EditText
                android:id="@+id/editTextExpiryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expiry_date"
                android:importantForAutofill="no"
                android:inputType="date" />

            <!-- Edit Text: CVV -->
            <EditText
                android:id="@+id/editTextCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvv"
                android:importantForAutofill="no"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewOrderTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextOrderComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"/>

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/finish"/>

    </LinearLayout>

</ScrollView>